<resources>
    <string name="app_name">Trell</string>
    <string name="app_version">1.0</string>
    <string name="title_activity_login">Login</string>
    <string name="user_name_or_email">Username / Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sign_in_with">Sign up to get your 50 Dimes</string>
    <string name="register_with_email">Register with email</string>
    <string name="please_wait">Please wait</string>
    <string name="login_to_see_profile">Please login to see your profile</string>
    <string name="login_to_see_settings">Please login to see your settings</string>
    <string name="register_with_email_success_msg">You Are Successfully Registered.</string>
    <string name="pass_mismatch_err_txt">Password and Confirm Password Mismatch.</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="profile">Profile</string>
    <string name="tnc_detail">PLEASE READ THESE TERMS OF USE \(\"TERMS\"\) CAREFULLY BEFORE USING WWW.DESIDIME.COM AS IT AFFECTS AND GOVERNS YOUR USE OF THESE WEB SITES AND YOUR LEGAL RIGHTS AND OBLIGATIONS. In order to use our service, you must read and accept all of the terms and conditions of this agreement and in the Privacy Policy. If you do not agree to be bound by the terms after you read this Agreement, you may not use our service.
        DesiDime.com is not an online merchant, we are only an online shopping portal that lists deals from other Shopping websites on the internet. We are not responsible, in any way, for any products ordered from our affiliated or non affiliated merchants. You \(the \"Visitor\"\) must carefully read the fine print associated with each offer. All deals, coupons and promotions on this site are subject to change without notice. DesiDime.com does not guarantee or endorse the accuracy of links, coupon codes, or any deals on this site. You agree to comply with all rules, laws and regulations that are applicable to your use of the Web Site, including, without limitation, those governing your transmission or use of any software or data.</string>
    <string name="service_header"><u>Service and Terms</u></string>
    <string name="service_desc">Desidime.com provides a collection of online resources, including communication forums, shopping services, search functionality and a business directory(referred to hereafter as "the Service"). The Service is provided by desidime.com, and is subject to the following Terms of Use ("Terms"), which may be updated by desidime.com from time to time. The desidime.com will provide notice of materially significant changes to the Terms by posting notice on the desidime.com homepage. You must be at least 14 years of age to use this Service. By using the Service in any way, you are agreeing to comply with these terms.</string>
    <string name="content_header"><u>Content</u></string>
    <string name="content_desc">By using this website, you understand and accept that all postings, messages, text, files, photos, videos, comments, images, or any such material("Content") posted on, transmitted through, or linked from the Service, are the sole responsibility of the person from whom such Content originated. Similarly, you are solely responsible for all Content that you post. Desidime.com cannot control and is not responsible for any content made available through this website. By using the Service, you may be exposed to Content that is offensive, indecent, inaccurate, misleading, or otherwise objectionable.
               Further, the desidime.com website and content made available through the service may contain links to other websites. The desidime.com website makes no representation or warranty as to the accuracy, completeness or authenticity of the information contained in any such site. We recommend caution when you link to any other website. The desidime.com site will not be liable for any damage or loss of any kind incurred as a result of use of Content posted, emailed or otherwise made available via the Service. The desidime.com website does not pre-screen or approve any content posted in forums but it has right to delete or move any Content, for violating the Terms or for any other reason deemed appropriate. DesiDime.com generally pre-screens Content posted in Premium Deals section but is not responsible for authenticity or accuracy of such Content.</string>
    <string name="third_header"><u>Third Party Content, Sites and Services</u></string>
    <string name="third_desc">The desidime.com website and Content available through the Service may contain features and functionalities that may link you or provide you with access to third party content, which is completely independent of DesiDime, including web sites, directories, servers, networks, systems, information and databases, applications, software, programs, products or services, and the Internet as a whole.
Your interactions with organizations and/or individuals found on or through the Service, including payment and delivery of goods or services, and any other terms, conditions, warranties or representations associated with such dealings, are solely between you and such organizations and/or individuals. You should make whatever investigation you feel necessary or appropriate before proceeding with any online or offline transaction with any of these third parties.
You agree that DesiDime shall not be responsible or liable for any loss or damage of any sort incurred as result of any such dealings.If there is a dispute between participants on this site, or between users and any third party, you understand and agree that DesiDime (or Parity Labs) is under no obligation to become involved. In the event that you have a dispute with one or more other users, you hereby release DesiDime (or Parity Labs), its officers, employees, agents and successors in rights from claims, demands and damages (actual and consequential) of every kind or nature, known or unknown, suspected and unsuspected, disclosed and undisclosed, arising out of or in any way related to such disputes and / or our service.</string>
    <string name="desidime_privacy_header"><u>DesiDime Privacy Policy</u></string>
    <string name="desidime_privacy_desc">Registration Data and certain other information about you is subject to our Privacy Policy. For more information, please read our full privacy policy.</string>
    <string name="desidime_account_header"><u>DesiDime Account, Password and Security</u></string>
    <string name="desidime_account_desc">You will receive a password and account designation upon completing the registration process. You are responsible for maintaining the confidentiality of the password and account and are fully responsible for all activities that occur under your password or account. You agree to (a) immediately notify DesiDime of any unauthorized use of your password or account or any other breach of security, and (b) DesiDime recommends that you exit from your account at the end of each session if using a public computer. DesiDime cannot and will not be liable for any loss or damage arising from your failure to comply with maintaining your account and/or password.</string>
    <string name="member_header"><u>Member Conduct</u></string>
    <string name="member_desc">        You agree not to post, email, or otherwise make available Content\:
        That Is Unlawful, Harmful, Threatening, Abusive, Harassing, Defamatory, Libelous, Invasive Of Another\'s Privacy, Or Is Harmful To Minors In Any Way\;
That Harasses, Degrades, Intimidates Or Is Hateful Toward An Individual Or Group Of Individuals On The Basis Of Religion, Gender, Sexual Orientation, Race, Ethnicity, Age, Or Disability\;
That Impersonates Any Person Or Entity, Including, But Not Limited To, A DesiDime Employee, Or Falsely States Or Otherwise Misrepresents Your Affiliation With A Person Or Entity \(This Provision Does Not Apply To Content That Constitutes Lawful Non-Deceptive Parody Of Public Figures.\)\;
That Includes Personal Or Identifying Information About Another Person Without That Person\'s Explicit Consent\;
That Is False, Deceptive, Misleading, Deceitful, Misinformative, Or Constitutes \"Bait And Switch\"\;
That Infringes Any Patent, Trademark, Trade Secret, Copyright Or Other Proprietary Rights Of Any Party, Or Content That You Do Not Have A Right To Make Available Under Any Law Or Under Contractual Or Fiduciary Relationships\;
That Constitutes Or Contains \"Affiliate Marketing,\" \"Link Referral Code,\" \"Junk Mail,\" \"Spam,\" \"Chain Letters,\" \"Pyramid Schemes,\" Or Unsolicited Commercial Advertisement\;
That Advertises Any Illegal Service Or The Sale Of Any Items The Sale Of Which Is Prohibited Or Restricted By Any Applicable Law In India Or Any Of Its Constituent States
That Contains Software Viruses Or Any Other Computer Code, Files Or Programs Designed To Interrupt, Destroy Or Limit The Functionality Of Any Computer Software Or Hardware Or Telecommunications Equipment\;
That Disrupts The Normal Flow Of Dialogue With An Excessive Amount Of Content \(Flooding Attack\) To The Service, Or That Otherwise Negatively Affects Other Users\' Ability To Use The Service\; Or
That Employs Misleading Email Addresses, Or Forged Headers Or Otherwise Manipulated Identifiers In Order To Disguise The Origin Of Content Transmitted Through The Service.

In addition, you also agree not to\:

Make Unsolicited Contact With Anyone For Any Commercial Purpose\;
\"Stalk\" Or Otherwise Harass Anyone\;
Collect Personal Data About Other Users For Commercial Or Unlawful Purposes\;
Use Automated Means, Including Spiders, Robots, Crawlers, Data Mining Tools, Or The Like To Download Data From The Service - Unless Expressly Permitted By DesiDime
Post Non-Local Or Otherwise Irrelevant Content, Repeatedly Post The Same Or Similar Content Or Otherwise Impose An Unreasonable Or Disproportionately Large Load On Our Infrastructure\;
       Post The Same Item Or Service In More Than One Forum
Attempt To Gain Unauthorized Access To DesiDime\'s Computer Systems, Servers Or Engage In Any Activity That Disrupts, Diminishes The Quality Of, Interferes With The Performance Of, Or Impairs The Functionality Of, The Service Or The DesiDime Website\; Or
Use Any Form Of Automated Device Or Computer Program That Enables The Submission Of Postings On DesiDime Without Each Posting Being Manually Entered By The Author Thereof \(An \"Automated Posting Device\"\), Including Without Limitation, The Use Of Any Such Automated Posting Device To Submit Postings In Bulk, Or For Automatic Submission Of Postings At Regular Intervals.
Use Any Form Of Automated Device Or Computer Program \(\"Voting Tool\"\) That Enables The Use Of DesiDime \"Topic Voting System\" Without Each Vote Being Manually Entered By The Person\;</string>
    <string name="indemnity_header"><u>Indemnity</u></string>
    <string name="indemnity_desc">You agree to indemnify and hold DesiDime and its subsidiaries, affiliates, officers, agents, employees, partners and licensors harmless from any claim or demand, including reasonable attorneys’ fees, made by any third party due to or arising out of Content you submit, post, transmit or otherwise make available through the Service, your use of the Service, your connection to the Service, your violation of the TOS, or your violation of any rights of another.</string>
    <string name="violations_header"><u>Violations of TOS</u></string>
    <string name="violations_desc">Please report any violations of the TOS to our Customer Support at admin@desidime.com</string>
    <string name="effective_header"><u>EFFECTIVE DATE</u></string>
    <string name="effective_desc">This TOS is effective as of September 25th, 2010.</string>
    <string name="notification_title">Notifications</string>
    <string name="create">Create</string>
    <string name="explore">Explore</string>
</resources>