<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="10">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/signin_bg"
        android:padding="30dp"
        android:src="@drawable/ic_user_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="@dimen/padding_large"
        android:weightSum="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_mail_icon" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userNameTextIput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:theme="@style/floatingTextStyle">

                <EditText
                    android:id="@+id/userNameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:hint="@string/user_name_or_email"
                    android:background="@drawable/edittext_selector"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/userPasswordTextInput"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:theme="@style/floatingTextStyle">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/margin_normal"
                    android:hint="@string/password"
                    android:background="@drawable/edittext_selector"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />


        <Button
            android:id="@+id/signInDialogButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.75"
            android:background="@drawable/button_selector"
            android:padding="@dimen/padding_normal"
            android:text="@string/sign_in_text"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />


        <TextView
            android:id="@+id/forgetPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:shadowColor="@color/dark_grey"
            android:shadowDx="0.3"
            android:shadowDy="0.3"
            android:shadowRadius="0.2"
            android:text="@string/forgot_password"
            android:textColor="@color/blueTextColor"
            android:textSize="@dimen/text_size_large" />


    </LinearLayout>


</LinearLayout>